--- a/registration/css/style.css
+++ b/registration/css/style.css
@@ -23,11 +23,11 @@ body{
   border:0;
   background: none;
   display: block;
-  margin: 20px auto;
-  text-align: center;
+  margin: 2px auto;
+  text-align: left;
   border: 2px solid #3498db;
-  padding: 14px 10px;
-  width: 200px;
+  padding: 1px 1px;
+  width: 20px;
   outline: none;
   color: white;
   border-radius: 24px;
