--- a/registration/css/style.css
+++ b/registration/css/style.css
@@ -29,7 +29,7 @@ body{
   padding: 1px 1px;
   width: 20px;
   outline: none;
-  color: white;
+  color: black;
   border-radius: 24px;
   transition: 0.25s;
 }
