--- a/registration/css/style2.css
+++ b/registration/css/style2.css
@@ -9,8 +9,8 @@ body {
 }
 
 .container {
-    padding: 16px;
-    background-color: white;
+    padding:  18px;
+    background-color: azure;
     border: 1px solid;
 }
 
@@ -70,4 +70,32 @@ a {
 .signin {
     background-color: #f1f1f1;
     text-align: center;
+    padding:6px;
+}
+#form_login {
+    border:none;
+    left: 50%;
+    top: 30%;
+    margin-left: -10%;
+    position: absolute;
+    margin-top: -10%;
+    width:
+
+}
+body {
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
