--- a/registration/css/style.css
+++ b/registration/css/style.css
@@ -1,56 +1,239 @@
 body{
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: #6DD5FA;
+    margin: 0px;
+    padding: 0px;
+    /* overflow-y: hidden; */
+    max-height: 100vh;
+   /* background:url("https://t4.ftcdn.net/jpg/02/90/08/85/240_F_290088578_ECTrjVcG4lZS3kdIBqBamIu0l7Z9Tx4Y.jpg"); */
+   background-repeat: no-repeat;
+    overflow-x: hidden;
+}
+.bckgrd{
+    width:100%;
+    z-index: -1;
+
+}
+hr{
+    margin-top:-15px;
+    width:80%;
+    color: black;
+}
+nav a{
+    text-decoration: none;
+}
+header{
+    padding:10px;
+    height:70px;
+    width: 100%;
+    box-shadow: 2px 0px 5px;
+}
+header h2{
+    
+    float:left;
+    padding-left:25px;
+}
+header nav{
+
+    float:right;
+}
+header ul{
+    list-style-type: none;
+    display: block;
+    padding:0px;
+}
+header>nav>ul>li{
+    float:left;
+   
+}
+li{
+    padding:0.5em 1em;
+    cursor: pointer;
+    transition: 0.5s;
+}
+li:hover , li>a:hover{
+    font-size:16px;
+    background-color: #3549fa;
+    color:#fff; 
+}
+.header{
+    width:1000px;
+    height:80vh;
+    position: absolute;
+    top:110px;
+    left:170px;
+    box-shadow: 2px 0px 10px  black;
+    /* background-color:lightgreen; */
+    /* visibility: hidden; */
+}
+.login{
+    font-size:30px;
+    /* margin-left:500px; */
+    text-align: center;
+    color:green;
 }
 .form{
+    position: absolute;
+    width:80%;
+    height:75%;
+    left:50px;
+    /* background-color: #009245; */
+}
+.inputbox1{
+    position: absolute;
+    top:50px;
+    left:280px;
+    width:45%;
+    height:30px;
+    font-size: 16px;
+    border-top: none;
+    border-right: none;
+    outline: none;
+    border-left: none;
+    border-bottom: 2px solid black;
+    /* box-shadow: 1px 2px 2px 1px; */
+    /* text-align: center; */
+}
+.inputbox2{
+    position: absolute;
+    top:130px;
+    left:280px;
+    width:45%;
+    outline: none;
+    height:30px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-bottom: 2px solid black;
+    /* box-shadow: 1px 2px 2px 1px; */
+    font-size: 16px;
+    /* text-align: center; */
+}
+.loginbut
+{
+    position: absolute;
+    width:35%;
+    height:30px;
+    left:320px;
+    top:200px;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    cursor: pointer;
+    outline: none;
+    box-shadow: 3px 2px 1px 0 ;
+    background: transparent;
+    background-color: #009245;
+    font-weight: bold;
+    color: white;
+    border-bottom: 2px solid black;
+}
+.st,.cl{
   width: 300px;
-  padding: 40px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  background: #d0e4f0;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 2px 2px 2px;  
+  margin-left:310px;
 }
-.form h1{
-  color: black;
-  text-transform: uppercase;
-  font-weight: 500;
+
+.cl{
+  margin-top: 300px;
 }
-.form input[type="text"],.form input[type="password"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 2px auto;
-  text-align: left;
-  border: 2px solid #3498db;
-  padding: 1px 1px;
-  width: 20px;
-  outline: none;
-  color: black;
-  border-radius: 24px;
-  transition: 0.25s;
+.st{
+  position: relative;
+  top:280px;
 }
-.form input[type="text"]:hover,.form input[type="password"]:hover{
-  width: 280px;
-  border-color: #2ecc71;
+.red{
+    color:red;
+    cursor: pointer;
+    text-decoration: none;
+    padding: 5px;
 }
-.form input[type="submit"]{
-  border:0;
-  background: none;
-  display: block;
-  margin: 10px auto;
-  text-align: center;
-  border: 2px solid #2ecc71;
-  padding: 14px 40px;
-  outline: none;
-  color: black;
-  border-radius: 24px;
-  transition: 0.75s;
-  cursor: pointer;
+
+.image{
+    width:400px;
+    height:400px;
+    position: absolute;
+    left:45px;
 }
-.form input[type="submit"]:hover {
-  background: #2ecc71;
+.reg{
+    width:500px;
+    height:400px;
+    /* border: solid 1px; */
+    position: absolute;
+    background-color:white;
+    top:100px;
+    left:700px;
+    visibility: hidden;
+    box-shadow: 2px 0px 10px black;
 }
+
+.regs{
+    text-align: center;
+}
+.para{
+    position: absolute;
+    top:435px;
+    left:820px;
+    color: green;
+    font-size: 25px;
+}
+.para1{
+    position: absolute;
+    top:435px;
+    left:920px;
+    color: red;
+    font-size: 25px;
+}
+.kreg{
+    position: absolute;
+    top:250px;
+    left:400px;
+}
+span{
+    text-decoration: underline;
+    font-weight: bold;
+    color: red;
+}
+#green{
+    color: green;
+    cursor: pointer;
+}
+
+
+.but{
+    width:50px;
+    height:25px;
+    border:none;
+    background: white;
+}
+@media(max-width: 700px){
+
+    body,html{
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+    .header{
+        left:10px;
+        width:470px;
+        top:510px;
+    }
+    .hr{
+        width: 100%;
+        height:3px;
+        padding: 0px;
+        margin: 0px;
+        background-color:black;
+    }
+
+    body::-webkit-scrollbar{
+        width:0.1rem;
+    }
+    body::-webkit-scrollbar-thumb{
+        background-color: navy;
+        -moz-backround-color:navy;
+    }
+
+}
+
+/* Style1 */
