--- a/registration/css/style1.css
+++ b/registration/css/style1.css
@@ -1,66 +1,207 @@
-
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: black;
-}
-
-* {
+*{
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-.container {
-    padding: 16px;
-    background-color: white;
+body,html{
+    margin: 0px;
+    padding: 0px;
+    overflow: hidden;
 }
-
-input[type=text],
-input[type=password] {
-  border:0;
-  background: none;
-  display: block;
-  margin: 2px auto;
-  text-align: center;
-  border: 2px solid #3498db;
-  padding: 14px 10px;
-  width: 200px;
-  outline: none;
-  border-radius: 24px;
-  transition: 0.25s;
+nav a{
+    text-decoration: none;
 }
-
-input[type=text]:hover,
-input[type=password]:hover {
-     width: 280px;
-  border-color: #2ecc71;
+header{
+    padding:10px;
+    height:80px;
+    width: 100%;
+    box-shadow: 2px 0px 5px;
 }
-
-hr {
-    border: 1px solid #f1f1f1;
-    margin-bottom: 25px;
+header h2{
+    
+    float:left;
+    padding-left:25px;
 }
+header nav{
 
-.registerbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px 20px;
-    margin: 8px 0;
-    border: 2px, solid;
-    border-radius: 24px;
+    float:right;
+}
+header ul{
+    list-style-type: none;
+    display: block;
+    padding:0px;
+}
+header>nav>ul>li{
+    float:left;
+   
+}
+li{
+    padding:0.5em 1em;
     cursor: pointer;
-    width: 20%;
-    opacity: 0.9;
+    transition: 0.5s;
+}
+li:hover , li>a:hover{
+    font-size:16px;
+    background-color: #3549fa;
+    color:#fff; 
 }
 
-.registerbtn:hover {
-    opacity: 10;
-
+section{
+    width: 100%;
+    height:90vh;
+    background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%);
 }
 
-a {
-    color: dodgerblue;
+.form{
+    width:65%;
+    height: 80vh;
+    box-shadow: 2px 0px 15px;
+    background: white;
+    float: left;
+    margin-top: 30px;
+    margin-left:30px;
+    overflow: auto;
+    border-radius: 5px;
 }
-
-.signin {
-    background-color: #f1f1f1;
+.form::-webkit-scrollbar{
+    width:0.3rem;
+}
+.form::-webkit-scrollbar-thumb{
+    background-color: #009245;
+    -moz-backround-color:#009245;
+}
+.whos-div{
+    width:32.7%;
+    height:100%;
+    background:transparent;
+    float: left;
+}
+.form-title{
     text-align: center;
+    font-size:45px;
+    color:white;
+    margin-top: 150px;
+    font-weight: bold;
+    line-height: 1.5em;
 }
+.form-title span{
+    font-size: 65px;
+    color:#009245;
+}
+.please{
+    padding: 20px 35px;
+    font-size: 23px;
+    font-weight: bold;
+}
+.c-input{
+    width:350px;
+    height:30px;
+    outline: none;
+    border:none ;
+    padding-left: 8px;
+    margin-left: 50px;
+    margin-top: 40px;
+    border-bottom: 3px solid blue;
+    background: transparent;
+    font-size: 18px;
+}
+.c-input:focus{
+    border-bottom-color: #009245;
+}
+
+.y-input{
+    width:350px;
+    height:30px;
+    outline: none;
+    border:none ;
+    padding-left: 8px;
+    margin-left: 50px;
+    margin-top: 40px;
+    border-bottom: 3px solid blue;
+    background: transparent;
+    font-size: 18px;
+}
+.y-input:focus{
+    border-bottom-color: #009245;
+}
+
+.file{
+    padding: 20px 45px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #009245;
+}
+
+.upload-files {
+    display: inline-block;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    margin-left:50px;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+  }
+  .upload-files:hover {
+    border-color: black;
+  }
+  .upload-files:active {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+  }
+
+  .add-me{
+    width: 250px;
+    height:40px;
+    margin-top: 50px;
+    background: #3549fa;
+    border: none;
+    outline: none;
+    color:white;
+    font-weight: bold;
+    margin-left:300px;
+    cursor: pointer;
+  }
+
+  @media(max-width:500px){
+    body,html{
+        overflow: auto;
+    }
+    body::-webkit-scrollbar{
+        width:0.1rem;
+    }
+    body::-webkit-scrollbar-thumb{
+        background-color: navy;
+        -moz-backround-color:navy;
+    }
+
+    .whos-div{
+        width:100%;
+        height:330px;
+        position: relative;
+        top:-555px;
+    }
+    .form-title{
+        margin-top:40px;
+    }
+    .form{
+        width:100%;
+        margin-left:0px;
+        box-shadow: 0 0 0;
+        position: relative;
+        top:300px;
+        border-radius: 0px;
+    }
+    .add-me{
+        margin-left: 180px;
+    }
+    .please{
+        text-align: center;
+    }
+    .c-input,.y-input{
+       margin-left: 70px;
+    }
+  }
