--- a/registration/css/style2.css
+++ b/registration/css/style2.css
@@ -1,4 +1,4 @@
-
+/* 
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
@@ -98,4 +98,371 @@ body {
     100% {
         background-position: 0% 50%;
     }
+} */
+*{
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+body,html{
+    margin: 0px;
+    padding: 0px;
+    /* height:200vh; */
+    overflow: hidden;
+    
+}
+nav a{
+    text-decoration: none;
+}
+header{
+    padding:10px;
+    height:80px;
+    width: 100%;
+    box-shadow: 2px 0px 5px;
+}
+header h2{
+    
+    float:left;
+    padding-left:25px;
+}
+header nav{
+
+    float:right;
+}
+header ul{
+    list-style-type: none;
+    display: block;
+    padding:0px;
+}
+header>nav>ul>li{
+    float:left;
+   
+}
+li{
+    padding:0.5em 1em;
+    cursor: pointer;
+    transition: 0.5s;
+}
+li:hover , li>a:hover{
+    font-size:16px;
+    background-color: #3549fa;
+    color:#fff; 
+}
+section{
+    width:100%;
+    height:90vh;
+    /* background-image: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%); */
+    /* background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%); */
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    /* background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); */
+    /* background: yellow; */
+}
+.who-div{
+    width:32.7%;
+    height:100%;
+    background: transparent;
+    float: left;
+}
+.form-div{
+    width:65%;
+    height:80vh;
+    box-shadow: 2px 0px 15px;
+    background: white;
+    float: left;
+    margin-right: 30px;
+    margin-top: 30px;
+    overflow: auto;
+    border-radius: 5px;
+}
+.form-div::-webkit-scrollbar{
+    width:0.3rem;
+}
+.form-div::-webkit-scrollbar-thumb{
+    background-color: #009245;
+    -moz-backround-color:#009245;
+}
+.form-title{
+    text-align: center;
+    font-weight: bold;
+    color:white;
+    font-size:45px;
+    margin-top:130px;
+    line-height: 1.6em;
+    padding-left: 0px; 
+}
+.form-title span{
+    color:yellow;
+    font-size:65px;
+    /* font-family: 'Orbitron', sans-serif; */
+}
+.personal{
+    font-size: 20px;
+    font-weight: bold;
+    color:#009245;
+    margin-left: 50px;
+}
+
+.namediv,.emaildiv{
+    float: left;
+}
+.passworddiv,.mobiledivision{
+    float: left;
+}
+.select,.mobdiv{
+    float: left;
+}
+.locdiv{
+    float: left;
+}
+
+
+.name-input{
+    width:350px;
+    height:30px;
+    outline: none;
+    border:none ;
+    padding-left: 8px;
+    margin-left: 50px;
+    /* border-radius: 3px; */
+    border-bottom: 3px solid blue;
+    background: transparent;
+    font-size: 18px;
+}
+.name-input:focus{
+    border-bottom-color: #009245;
+}
+.locdiv .name-input{
+    position: relative;
+    top:-280px;
+}
+.high .mobile-input{
+    position: relative;
+    top:-280px;
+    left:50px;
+}
+
+.email-input{
+    width:350px;
+    height:30px;
+    padding-left: 8px;
+    outline: none;
+    border:none;
+    position: relative;
+    left:450px;
+    top:-33px;
+    /* border-radius: 5px; */
+    border-bottom: 3px solid blue;
+    background: transparent;
+    font-size: 18px;
+}
+.email-input:focus{
+    border-bottom-color: #009245;
+}
+
+.select{
+    position: relative;
+    left:450px;
+    top:-36px;
+    /* border-radius: 5px; */
+    border-bottom: 3px solid blue;
+    width:80px;
+    height:33px;
+}
+.isd-select{
+    width:80px;
+    display: block;
+    background: transparent;
+    border: none;
+    outline: none;
+}
+.isd{
+    padding: 20px;
+    font-size: 13px;
+    font-weight: bold;
+}
+.mobile-input{
+    width:350px;
+    height:30px;
+    padding-left: 8px;
+    outline: none;
+    border:none;
+    position: relative;
+    left:452px;
+    top:-33px;
+    /* border-radius: 5px; */
+    border-bottom: 3px solid blue;
+    background: transparent;
+    font-size: 18px;
+}
+.mobile-input:focus{
+    border-bottom-color: #009245;
+}
+
+.stat{
+    margin-left:450px;
+    margin-top:-28px;
+}
+
+.edu-select{
+    width:350px;
+    height:30px;
+    background:transparent;
+    outline:none;
+    border:none;
+    /* border-radius: 5px; */
+    border-bottom:3px solid blue;
+    font-size:16px;
+}
+
+
+.yrs-input{
+    width:350px;
+    height:30px;
+    outline: none;
+    border:none;
+    padding-left: 8px;
+    position: relative;
+    left:450px;
+    top:-63px;
+    /* border-radius: 5px; */
+    border-bottom: 3px solid blue;
+    background: transparent;
+    font-size: 18px;
+}
+}
+.yrs-input:focus{
+    border-bottom-color: #009245;
+}
+
+.upload-files{
+    width:200px;
+    height:40px;
+    background: transparent;
+    border: none;
+    outline: none;
+    position: relative;
+    left:50px;
+}
+
+.submit-button{
+    position: relative;
+    width: 250px;
+    height:40px;
+    left:300px;
+    top:-150px;
+    margin-bottom: 50px;
+    background: red;
+    border: none;
+    outline: none;
+    color:white;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px grey;
+}
+
+.upload-files {
+    display: inline-block;
+    background: linear-gradient(top, #f9f9f9, #e3e3e3);
+    border: 1px solid #999;
+    border-radius: 3px;
+    padding: 5px 8px;
+    outline: none;
+    white-space: nowrap;
+    -webkit-user-select: none;
+    cursor: pointer;
+    text-shadow: 1px 1px #fff;
+    font-weight: 700;
+    font-size: 10pt;
+  }
+  .upload-files:hover {
+    border-color: black;
+  }
+  .upload-files:active {
+    background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+  }
+
+@media(max-width:500px){
+    body,html{
+        overflow: auto;
+    }
+    body::-webkit-scrollbar{
+        width:0.1rem;
+    }
+    body::-webkit-scrollbar-thumb{
+        background-color: navy;
+        -moz-backround-color:navy;
+    }
+    .who-div{
+        width:100%;
+        height:300px;
+    }
+    .form-title{
+        text-align: center;
+        line-height: 1.5em;
+        font-size: 40px;
+        margin-top:70px;
+    }
+    .form-title span{
+        font-size: 65px;
+    }
+    .form-div{
+        width: 100%;
+        border-radius: 0px;
+        box-shadow: 0 0 0 ;
+        overflow-x: hidden;
+    }
+    .namediv{
+         position: relative;
+         left:10px;
+    }
+    .emaildiv{
+       position: relative;
+       left:-390px;
+       top:80px;
+    }
+    .mobiledivision{
+        position: relative;
+        left:-390px;
+        top:170px;
+    }
+    .passworddiv{
+        position: relative;
+        top:90px;
+        left:10px;
+    }
+    .locdiv{
+        position: relative;
+        top:180px;
+        left: 10px;
+    }
+   
+    .personal.edu{
+        position: relative;
+        top:180px;
+    }
+    .submit-button{
+        left:180px;
+        top:20px;
+    }
+    .high{
+        position: relative;
+        top:180px;
+        left:10px;
+    }
+    .stat{
+        position: relative;
+        left:-390px;
+        top:250px;
+    }
+    .field{
+       
+        margin-top:220px;
+        margin-left:10px;
+    }
+    .yrs{
+        position: relative;
+        left:-390px;
+        top:70px;
+    }
+  
+}
+
