--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/bgpic.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./img/bgpic.jpg);
     height : 100vh;
     background-size: cover;
     background-position: center;
