--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./img/bgpic.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(./img/bgpic.jpg);
     height : 100vh;
     background-size: cover;
     background-position: center;
@@ -44,6 +44,11 @@ header {
     transition: 0.6s ease;
 }
 
+.sub ul li {
+    
+
+}
+
 .nav li a:hover {
     background-color: #fff;
     color: black;
@@ -53,7 +58,7 @@ header {
     display: none;
 }
 
-.nav li:hover .sub {
+.nav li:hover .sub{
     display: block;
     position: absolute;
 }
@@ -61,7 +66,7 @@ header {
 .nav li .sub ul {
     display: block;
     margin: -5px;
-
+    padding: 20px;
 }
 
 .detail {
