--- a/dash/dashstyle.css
+++ b/dash/dashstyle.css
@@ -4,8 +4,8 @@
 }
 .nav{
     width: 100%;
-    height:40px;
-    background: orange;
+    height:60px;
+    background: lightseagreen;
     /* padding: 10px; */
 }
 .nav p{
@@ -15,6 +15,6 @@
 .logout{
     text-align: right;
     margin-right:60px;
-    margin-top: -35px;
+    margin-top: -50px;
 
 }
