--- a/events/css/style.css
+++ b/events/css/style.css
@@ -2,8 +2,26 @@
     margin:0px;
     padding:0px;
 }
-
-
+ 
+.img{
+    height:50px;
+    width: 120px;
+    margin-left: 35px;
+    margin-top:40px;
+}
+.cat{
+    color:white;
+    font-size: 18px;
+}
+.imgbig{
+    position: absolute;
+    height:200px;
+    width:600px;
+    z-index:-1;
+    left:260px;
+    /* background: rgb(255, 255, 255) transparent; */
+    opacity:0.3;
+}
 .nav{
     float:left;
     width: 200px;
@@ -18,6 +36,7 @@
     height:93vh;
     margin-left:40px;padding: 10px;
     box-shadow: 2px 2px 2px 2px blue;
+    
 }
 .logo{
     padding:25px;
@@ -30,9 +49,11 @@
     margin-left: 800px;
     width:200px;
     height:250px;
-    background: lightgray;
+    background: lightseagreen;
     border-radius: 5px;
     box-shadow: 1px 1px 1px 1px;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 .aside p{
     padding: 15px;
@@ -56,3 +77,13 @@ ul li a:hover {
     box-shadow: 2px 0px 10px yellow;
     text-decoration:none;
   }
+.stath2{
+    text-align: center;
+    margin-top:50px;
+}
+.stat{
+    margin-top:30px;
+}
+.nolist{
+    text-decoration: none;
+}
