--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header {
     background-position: center;
 }
 
-.container {
+.containerz {
     max-width: 1200px;
     margin: auto;
 }
@@ -60,7 +60,7 @@ header {
  
 .comt {
     position: absolute;
-    top: 60%;
+    top: 80%;
     left: 50%;
     color: white;
     transform: translate(-50%,-50%);
@@ -73,4 +73,49 @@ header {
 .detail h1 {
     font-size: 70px;
     color: white;
+}
+
+.container {
+    position: relative;
+    bottom: 150px;
+}
+
+.container div {
+    position: relative;
+    top: 20px;
+    width: 100%;
+    bottom: 100px;
+}
+
+.container div div div{
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 20px;
+    background-color: rgba(252, 250, 248, 0.9);
+    transition: 0.5s ease;
+}
+
+.container div div div:hover{
+    border: 2px solid rgb(247, 189, 189);
+    padding: 30px;
+    background-color: rgb(253, 246, 239);
+}
+
+.container div div div button{
+    background-color: white;
+    border-radius: 12px;
+    font-size: small;
+    padding: 6px;
+    border: 1px solid;
+}
+
+.container div div div button:hover{
+    background-color: rgb(88, 82, 82);
+    color: white;
+}
+
+footer {
+    background-color:black;
+    color: white;
+    height: 70px;
 }
