--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header {
     border: 1px solid;
     border-radius: 10px;
     padding: 20px;
-    background-color: rgba(252, 250, 248, 0.9);
+    background-color: rgba(252, 250, 248, 0.8);
     transition: 0.5s ease;
 }
 
@@ -115,6 +115,8 @@ header {
 }
 
 footer {
+    width: 100%;
+    position: absolute;
     background-color:black;
     color: white;
     height: 70px;
