--- a/events/css/style.css
+++ b/events/css/style.css
@@ -46,9 +46,10 @@
 }
 
 .aside{
-    margin-left: 800px;
+    margin-top: 100px;
+    margin-left: 1000px;
     width:200px;
-    height:250px;
+    height:280px;
     background: lightseagreen;
     border-radius: 5px;
     box-shadow: 1px 1px 1px 1px;
@@ -65,6 +66,26 @@
     list-style: none;
     padding: 5px;
     margin-left: 20px;
+}
+.about{
+    position: relative;
+    top:50px;
+    margin-left: 1000px;
+    width:200px;
+    height:150px;
+    background: lightseagreen;
+    border-radius: 5px;
+    box-shadow: 1px 1px 1px 1px;
+    overflow-y: auto;
+    overflow-x: hidden; 
+}.ab{
+    margin: 0px;
+    padding: 0px;
+    font-size:25px;
+    padding: 30px;
+    font-weight: bold;
+    color:white;
+    text-align: center;
 }
 a{
     text-decoration:none;
