--- a/registration/css/style.css
+++ b/registration/css/style.css
@@ -15,11 +15,19 @@ hr{
 nav a{
     text-decoration: none;
 }
+.home{
+    margin-right: 150px;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: sans-serif;
+    color: #fff;
+}
 header{
     padding:10px;
     height:70px;
     width: 100%;
     box-shadow: 2px 0px 5px;
+    background: crimson;
 }
 header h2{
     
@@ -39,22 +47,34 @@ header>nav>ul>li{
     float:left;
    
 }
+.img{
+    padding: 10px;
+    margin-left: 50px;
+    width:140px;
+    height:50px;
+}
+.imgbig{
+    position: absolute;
+    height: 300px;
+    width:750px;
+    top:200px;
+    left:280px;
+    opacity:0.3;
+}
 li{
-    padding:0.5em 1em;
+    padding:0.2em 0.5em;
     cursor: pointer;
     transition: 0.5s;
 }
-li:hover , li>a:hover{
-    font-size:16px;
-    background-color: #3549fa;
-    color:#fff; 
+ li>a:hover{
+    border-bottom: solid 3px green;
 }
 .header{
-    width:1000px;
+    width:700px;
     height:80vh;
     position: absolute;
     top:110px;
-    left:170px;
+    left:300px;
     box-shadow: 2px 0px 10px  black;
     /* background-color:lightgreen; */
     /* visibility: hidden; */
@@ -69,29 +89,41 @@ li:hover , li>a:hover{
     position: absolute;
     width:80%;
     height:75%;
-    left:50px;
+    left:0px;
     /* background-color: #009245; */
 }
 .inputbox1{
     position: absolute;
     top:50px;
-    left:280px;
-    width:45%;
+    left:180px;
+    width:65%;
     height:30px;
+    background: transparent;
     font-size: 16px;
+    color:black;
     border-top: none;
     border-right: none;
     outline: none;
     border-left: none;
+    font-weight: 1000;
     border-bottom: 2px solid black;
     /* box-shadow: 1px 2px 2px 1px; */
     /* text-align: center; */
 }
+.inputbox1:focus{
+    border-bottom:2px solid crimson;
+}
+.inputbox2:focus{
+    border-bottom:2px solid crimson;
+}
 .inputbox2{
     position: absolute;
     top:130px;
-    left:280px;
-    width:45%;
+    color:black;
+    font-weight: 1000;
+    left:180px;
+    background: transparent;
+    width:65%;
     outline: none;
     height:30px;
     border-top: none;
@@ -105,9 +137,9 @@ li:hover , li>a:hover{
 .loginbut
 {
     position: absolute;
-    width:35%;
+    width:45%;
     height:30px;
-    left:320px;
+    left:240px;
     top:200px;
     border-top: none;
     border-right: none;
@@ -122,13 +154,13 @@ li:hover , li>a:hover{
     border-bottom: 2px solid black;
 }
 .st,.cl{
-  width: 300px;
+  width: 350px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   box-shadow: 2px 2px 2px;  
-  margin-left:310px;
+  margin-left:190px;
 }
 
 .cl{
@@ -183,7 +215,7 @@ li:hover , li>a:hover{
 .kreg{
     position: absolute;
     top:250px;
-    left:400px;
+    left:300px;
 }
 span{
     text-decoration: underline;
